Add Repository Tests

--- a/templates/create/model/tests/unit/models/test_{{ .Name.Singular.Snake }}.py.tmpl
+++ b/templates/create/model/tests/unit/models/test_{{ .Name.Singular.Snake }}.py.tmpl
@@ -1,5 +1,6 @@
-from app.models.admin_user import AdminUser
 from faker import Faker
+
+from app.models.{{ .Name.Singular.Snake }} import {{ .Name.Singular.Title }}
 
 
 def test_create_model_instance():
