--- a/templates/create/api/app/http/controllers/{{ .PathName.Default.Snake }}_{{ .Method.Snake }}_controller.py.tmpl
+++ b/templates/create/api/app/http/controllers/{{ .PathName.Default.Snake }}_{{ .Method.Snake }}_controller.py.tmpl
@@ -31,15 +31,17 @@ async def {{ .Method.Snake }}_{{ .PathName.Default.Snake }}(
     limit: int = 20,
 {{- else if eq .RequestSubType "get" }}
     id: str,
-{{- else if eq .Method.Camel "update" }}
+{{- else if eq .RequestSubType "update" }}
     id: str,
-{{- else if eq .Method.Camel "delete" }}
+{{- else if eq .RequestSubType "delete" }}
     id: str,
+{{- end }}
 {{- end }}
 {{- if ne .RequestSchemaName.Default.Title "" }}
     request: Request,
     request_data: {{ .RequestSchemaName.Default.Title }}
 {{- end }}
+
 ) -> {{ .SuccessResponse.Schema.Name.Default.Title }}:
     usecase = request.app.state.injector.get({{ .Method.Title }}{{ .PathName.Default.Title }}UsecaseInterface)
 
@@ -56,7 +58,7 @@ async def {{ .Method.Snake }}_{{ .PathName.Default.Snake }}(
 {{- else if eq .RequestSubType "update" }}
     model = usecase.handle(id, request_data.dict())
     return {{ .SuccessResponse.Schema.Name.Default.Title }}.from_model(model)
-{{- else if eq .Method.Camel "delete" }}
+{{- else if eq .RequestSubType "delete" }}
     success = usecase.handle(id)
     return {{ .SuccessResponse.Schema.Name.Default.Title }}.from_model(success)
 {{- end }}
