--- a/templates/create/model/app/repositories/{{ .Name.Singular.Snake }}_repository.py.tmpl
+++ b/templates/create/model/app/repositories/{{ .Name.Singular.Snake }}_repository.py.tmpl
@@ -1,4 +1,4 @@
-from ..models import {{ .Name.Singular.Title }}
+from ..models.{{ .Name.Singular.Snake }} import {{ .Name.Singular.Title }}
 from .base_repository import BaseRepository
 
 
