--- a/templates/create/api/app/http/responses/{{ .SuccessResponse.Schema.Name.Default.Snake }}.py.tmpl
+++ b/templates/create/api/app/http/responses/{{ .SuccessResponse.Schema.Name.Default.Snake }}.py.tmpl
@@ -1,11 +1,29 @@
 from pydantic import BaseModel
+{{- if ne .TargetModel nil }}
+
+from ...models.{{ .TargetModel.Singular.Snake }} import {{ .TargetModel.Singular.Title }} as Model
+{{- end }}
+{{- if .SuccessResponse.IsList }}
+
+from .{{ .SuccessResponse.Schema.Name.Singular.Snake }} import {{ .SuccessResponse.Schema.Name.Singular.Title }}
+{{- end }}
 
 
 class {{ .SuccessResponse.Schema.Name.Default.Title }}(BaseModel):
 {{- range .SuccessResponse.Schema.Properties}}
     {{ .Name.Original }}: {{ .Type }}
 {{- end}}
+{{- if .SuccessResponse.IsList }}
 
     @classmate
-    def from_model(cls, model: AdminUser) -> 'AdminMe':
-        return cls(id=str(model.id), name=model.name, email=model.email)
+    def from_model(cls, data: Model, count: int) -> '{{ .SuccessResponse.Schema.Name.Default.Title }}':
+        data = [{{ .SuccessResponse.Schema.Name.Singular.Title }}.from_model(model) for model in data]
+        return cls(data=data, count=count)
+{{- else }}
+{{- if ne .TargetModel nil }}
+
+    @classmate
+    def from_model(cls, model: Model) -> '{{ .SuccessResponse.Schema.Name.Default.Title }}':
+        return cls(**model.dict())
+{{- end }}
+{{- end }}
