--- a/templates/create/model/tests/unit/models/test_{{ .Name.Singular.Snake }}.py.tmpl
+++ b/templates/create/model/tests/unit/models/test_{{ .Name.Singular.Snake }}.py.tmpl
@@ -10,7 +10,7 @@ def test_create_model_instance():
 {{- range .Columns}}
 {{- if not .Primary }}
 {{- if not .IsSystemUseColumn }}
-        {{ .Name.Original }}=faker_instance{{ .FakerType }}(),
+        {{ .Name.Original }}=faker_instance.{{ .FakerType }}(),
 {{- end }}
 {{- end }}
 {{- end }}
