--- a/templates/create/api/tests/feature/test_{{ .PathName.Default.Snake }}_{{ .Method.Snake }}_controller.py.tmpl
+++ b/templates/create/api/tests/feature/test_{{ .PathName.Default.Snake }}_{{ .Method.Snake }}_controller.py.tmpl
@@ -1,27 +1,17 @@
 from fastapi.testclient import TestClient
 
 from app.bootstrap.create_app import create_app
+from .utilities import get_access_token
 
 app = create_app(environment="test")
 
 client = TestClient(app)
 
 
-def test_get_me():
+def test_{{ .PathName.Default.Snake }}_{{ .Method.Snake }}():
+    access_token = get_access_token(client)
+
     response = client.{{ .Method.Snake }}("{{ .Path }}",
-
-                           json={
-                               "email": "test@example.com",
-                               "password": "test",
-                           }
-
-                           )
-    assert response.status_code == 200
-    response_data = response.json()
-    assert "access_token" in response_data
-
-    access_token = response_data["access_token"]
-    response = client.get("/admin/me",
                           headers={"Authorization": f"bearer {access_token}"})
 
     assert response.status_code == 200
