--- a/templates/create/model/database/migrations/versions/{{ .Hash12Digit }}_create_{{ .Name.Singular.Snake }}.py.tmpl
+++ b/templates/create/model/database/migrations/versions/{{ .Hash12Digit }}_create_{{ .Name.Singular.Snake }}.py.tmpl
@@ -29,7 +29,7 @@ def upgrade() -> None:
         {{- if .Primary }}
         sqlalchemy.Column('{{ .Name.Original }}', UUID, primary_key=True, server_default=text('gen_random_uuid()')),
         {{- else }}
-        sqlalchemy.Column('{{ .Name.Original }}', sqlalchemy.{{ .ObjectType }}, nullable={{ if .Nullable }}True{{ else }}False{{ end }}) {{ if ne .DefaultValue "" }}default="{{ .DefaultValue }}"{{ end }}),
+        sqlalchemy.Column('{{ .Name.Original }}', sqlalchemy.{{ .ObjectType }}, nullable={{ if .Nullable }}True{{ else }}False{{ end }}{{ if ne .DefaultValue "" }}, default="{{ .DefaultValue }}"{{ end }}),
         {{- end }}
         {{- end }}
 
